--- a/assets/standard_test_img/standard_test_img_outline.html
+++ b/assets/standard_test_img/standard_test_img_outline.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-    <html lang="en">
-    
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Artem Ascii Image</title>
-    </head>
-    
-    <body>
-        <pre>         <span style="color: #7F7F7F">l</span><span style="color: #7F7F7F">l</span>       <span style="color: #333333">.</span>        <span style="color: #656565">:</span>       <span style="color: #313131">.</span>       <span style="color: #5A5A5A">;</span><span style="color: #9C9C9C">x</span>       <span style="color: #333333">.</span>        <span style="color: #656565">:</span>       <span style="color: #7F7F7F">l</span><span style="color: #7F7F7F">l</span>         
+         <span style="color: #7F7F7F">l</span><span style="color: #7F7F7F">l</span>       <span style="color: #333333">.</span>        <span style="color: #656565">:</span>       <span style="color: #313131">.</span>       <span style="color: #5A5A5A">;</span><span style="color: #9C9C9C">x</span>       <span style="color: #333333">.</span>        <span style="color: #656565">:</span>       <span style="color: #7F7F7F">l</span><span style="color: #7F7F7F">l</span>         
          <span style="color: #7F7F7F">l</span><span style="color: #7F7F7F">l</span>       <span style="color: #333333">.</span>        <span style="color: #656565">:</span>       <span style="color: #313131">.</span>       <span style="color: #5A5A5A">;</span><span style="color: #9C9C9C">x</span>       <span style="color: #333333">.</span>        <span style="color: #656565">:</span>       <span style="color: #7F7F7F">l</span><span style="color: #7F7F7F">l</span>         
          <span style="color: #7F7F7F">l</span><span style="color: #7F7F7F">l</span>       <span style="color: #333333">.</span>        <span style="color: #656565">:</span>       <span style="color: #313131">.</span>       <span style="color: #5A5A5A">;</span><span style="color: #9C9C9C">x</span>       <span style="color: #333333">.</span>        <span style="color: #656565">:</span>       <span style="color: #7F7F7F">l</span><span style="color: #7F7F7F">l</span>         
          <span style="color: #7F7F7F">l</span><span style="color: #7F7F7F">l</span>       <span style="color: #333333">.</span>        <span style="color: #656565">:</span>       <span style="color: #313131">.</span>       <span style="color: #5A5A5A">;</span><span style="color: #9C9C9C">x</span>       <span style="color: #333333">.</span>        <span style="color: #656565">:</span>       <span style="color: #7F7F7F">l</span><span style="color: #7F7F7F">l</span>         
@@ -35,4 +24,3 @@
          <span style="color: #656565">:</span><span style="color: #636363">;</span>           <span style="color: #B4B4B4">O</span>                <span style="color: #7F7F7F">l</span><span style="color: #7F7F7F">l</span>                 <span style="color: #252525">.</span>  <span style="color: #252525">.</span>       <span style="color: #636363">;</span><span style="color: #656565">:</span>         
          <span style="color: #656565">:</span><span style="color: #636363">;</span>           <span style="color: #B4B4B4">O</span>                <span style="color: #7F7F7F">l</span><span style="color: #7F7F7F">l</span>                 <span style="color: #252525">.</span>  <span style="color: #252525">.</span>       <span style="color: #636363">;</span><span style="color: #656565">:</span>         
          <span style="color: #656565">:</span><span style="color: #636363">;</span>           <span style="color: #B4B4B4">O</span>                <span style="color: #7F7F7F">l</span><span style="color: #7F7F7F">l</span>                 <span style="color: #252525">.</span>  <span style="color: #252525">.</span>       <span style="color: #636363">;</span><span style="color: #656565">:</span>         
-</pre></body></html>
