refactor!: move color to from config
BREAKING CHANGE: Moves the color settings from being enum fields to being set by config. Also fixes an issue, where the HTML was misformed.

--- a/assets/standard_test_img/standard_test_img_border_outline.html
+++ b/assets/standard_test_img/standard_test_img_border_outline.html
@@ -1,4 +1,15 @@
-╔══════════════════════════════════════════════════════════════════════════════╗
+<!DOCTYPE html>
+    <html lang="en">
+    
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Artem Ascii Image</title>
+    </head>
+    
+    <body>
+        <pre>╔══════════════════════════════════════════════════════════════════════════════╗
 ║         <span style="color: #9C9C9C">x</span>        <span style="color: #313131">.</span>       <span style="color: #656565">:</span>       <span style="color: #313131">.</span>       <span style="color: #7F7F7F">l</span><span style="color: #7F7F7F">l</span>       <span style="color: #333333">.</span>       <span style="color: #656565">:</span>        <span style="color: #9C9C9C">x</span>         ║
 ║         <span style="color: #9C9C9C">x</span>        <span style="color: #313131">.</span>       <span style="color: #656565">:</span>       <span style="color: #313131">.</span>       <span style="color: #7F7F7F">l</span><span style="color: #7F7F7F">l</span>       <span style="color: #333333">.</span>       <span style="color: #656565">:</span>        <span style="color: #9C9C9C">x</span>         ║
 ║         <span style="color: #9C9C9C">x</span>        <span style="color: #313131">.</span>       <span style="color: #656565">:</span>       <span style="color: #313131">.</span>       <span style="color: #7F7F7F">l</span><span style="color: #7F7F7F">l</span>       <span style="color: #333333">.</span>       <span style="color: #656565">:</span>        <span style="color: #9C9C9C">x</span>         ║
@@ -26,3 +37,4 @@
 ║         <span style="color: #6E6E6E">:</span>           <span style="color: #5A5A5A">;</span><span style="color: #9C9C9C">x</span>               <span style="color: #7F7F7F">l</span><span style="color: #5A5A5A">;</span>                   <span style="color: #252525">.</span>        <span style="color: #6E6E6E">:</span>         ║
 ║         <span style="color: #6E6E6E">:</span>           <span style="color: #5A5A5A">;</span><span style="color: #9C9C9C">x</span>               <span style="color: #7F7F7F">l</span><span style="color: #5A5A5A">;</span>                   <span style="color: #252525">.</span>        <span style="color: #6E6E6E">:</span>         ║
 ╚══════════════════════════════════════════════════════════════════════════════╝
+</pre></body></html>
